# ttt

./: .gitignore  Cargo.toml  build.nu  diagram.json  wokwi.toml
.cargo/: config.toml
kicad/: ttt.kicad_pcb  ttt.kicad_prl  ttt.kicad_pro  ttt.kicad_sch
src/: animation  buttons.rs  display.rs  hexapawn.rs  main.rs  millis.rs  ttt.rs
